[package]
name = "ddos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.14"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }


[profile.release]
panic = "abort"
strip = true
opt-level = "z"
lto = true
codegen-units = 1